--- a/css/main.css
+++ b/css/main.css
@@ -457,7 +457,7 @@ header .groupButton .socialGroupButton i:hover {
 }
 
 footer {
-  background-image: url(../../img/footer_background.jpg);
+  background-image: url(../img/footer_background.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
